--- a/conandata.yml
+++ b/conandata.yml
@@ -6,3 +6,5 @@ patches:
   "cci.20210309":
     - patch_file: "patches/0001-missing-includes.patch"
       base_path: "source_subfolder"
+    - patch_file: "patches/0002-install-headers.patch"
+      base_path: "source_subfolder"
